# new_grad_job_analytics

./: COLUMNS.md  NewGrad_JobMarket_Project_Plan.docx  README.md  analyze.ipynb  analyze.sql  bench.py  config.yaml  extract.py  run_sql.py  to_parquet.ipynb  to_parquet.py  ~$wGrad_JobMarket_Project_Plan.docx
agg-rs/: Cargo.toml
agg-rs/src/: main.rs
data/: cps_00003.xml
