[package]
name = "agg-rs"
version = "0.1.0"
edition = "2021"

# Reads data/cps.parquet and computes the weighted young-worker unemployment
# rate in Rust, timing it -- the "Rust ran Nx faster than pandas" benchmark
# line in the README. Polars gives us Parquet + columnar math without writing
# a parser by hand.
[dependencies]
polars = { version = "0.43", features = ["parquet", "lazy"] }

[profile.release]
opt-level = 3
